--- a/views/condamnation.ejs
+++ b/views/condamnation.ejs
@@ -13,7 +13,7 @@
 
   <div>
     <label for="duree">Duree de la condamnation :</label>
-    <input type="number" id="duree" name="duree">
+    <input type="number" id="duree" step="0.01" name="duree">
   </div>
 
   <input type="submit" value="Envoyer" />
