--- a/views/nouveauMotif.html
+++ b/views/nouveauMotif.html
@@ -1,7 +1,7 @@
 <form action="newMotif" method="post">
   <div>
     <label for="n_motif">Numero Motif :</label>
-    <input type="number" id="n_motif" name="n_motif">
+    <input type="number" min="0" id="n_motif" name="n_motif">
   </div>
   <div>
     <label for="prenom">Libelle du motif :</label>
