--- a/views/nouvelleAffaire.html
+++ b/views/nouvelleAffaire.html
@@ -1,7 +1,7 @@
 <form action="newAffaire" method="post">
   <div>
     <label for="n_affaire">Numero affaire :</label>
-    <input type="number" id="n_affaire" name="n_affaire">
+    <input type="number" min="0" id="n_affaire" name="n_affaire">
   </div>
   <div>
     <label for="nom_juridiction">Nom de la juridiction :</label>
