Ajout vérification schéma json avant des post

--- a/views/choixAffaire.ejs
+++ b/views/choixAffaire.ejs
@@ -31,7 +31,7 @@
         }
     </style>
 </head>
-<<body>
+<body>
     <form action="" method="post">
         <% for(var i=0; i<affaires.length; i++){ %>
             <div>
