--- a/views/nouveauDetenu.html
+++ b/views/nouveauDetenu.html
@@ -39,7 +39,7 @@
       </div>
       <div>
         <label for="prenom">Prenom :</label>
-        <input type="text" id="prenom" name="prenom">
+        <input type="text" required id="prenom" name="prenom">
       </div>
       <div>
         <label for="nom">Nom :</label>
@@ -53,7 +53,6 @@
         <label for="n_ecrou">Lieu de naissance :</label>
         <input type="text" required id="lieu_naissance" name="lieu_naissance">
       </div>
-
       <input type="submit" value="Envoyer" />
     </form>
 </body>
