--- a/views/choixMotif.ejs
+++ b/views/choixMotif.ejs
@@ -1,13 +1,51 @@
-<form action="" method="post">
 
+<head>
+    <style type="text/css" media="screen">
+        body{
+        	position: absolute;
+        	width:100%;
+        	height:100%;
+        	background:#D0ECE7;
+        }
+        form{
+        	background:  #73C6B6 ;
+        	position: absolute;
+        	top: 20%;
+        	left: 25%;
+        	right: 25%;
+        	bottom: 20%;
+        	border :4mm ridge grey;
+        }
+        .inline{
+        margin-left:30%;
+        }
+        input{
+        	padding:3px;
+        	margin-bottom:10px;
+        	margin-top:10px;
+        }
+        input[type="submit"]{
+        	margin-left:48%;
+        }
+        h3{
+        	text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <form action="" method="post">
+      <% for(var i=0; i<motifs.length; i++){ %>
+          <div>
+              <input type="radio" name="n_motif" value=<%= motifs[i].n_motif %> id=<%= motifs[i].n_motif %> />
+              <label><%= motifs[i].n_motif %> :  <%= motifs[i].libelle_motif %></label>
+          </div>
 
-  <% for(var i=0; i<motifs.length; i++){ %>
-  <input type="radio" name="n_motif" value=<%= motifs[i].n_motif %> id=<%= motifs[i].n_motif %> />
-  <p><%= motifs[i].n_motif %>  <%= motifs[i].libelle_motif %></p>
-  <% } %>
-
-  <input type="radio" name="n_motif" value="-1" id="-1" /> <p> Nouveau motif </p>
-
-  <input type="submit" value="Envoyer" />
-
-</form>
+      <% } %>
+      <div>
+           <input type="radio" name="n_motif" value="-1" id="-1" /> <label> Nouveau motif </label>
+      </div>
+      <div>
+          <input type="submit" value="Envoyer" />
+      </div>
+    </form>
+</body>
