--- a/views/nouveauDetenu.html
+++ b/views/nouveauDetenu.html
@@ -1,58 +1,45 @@
-<head>
-    <style type="text/css" media="screen">
-        body{
-        	position: absolute;
-        	width:100%;
-        	height:100%;
-        	background:#D0ECE7;
-        }
-        form{
-        	background:  #73C6B6 ;
-        	position: absolute;
-        	top: 20%;
-        	left: 25%;
-        	right: 25%;
-        	bottom: 20%;
-        	border :4mm ridge grey;
-        }
-        .inline{
-        margin-left:30%;
-        }
-        input{
-        	padding:3px;
-        	margin-bottom:10px;
-        	margin-top:10px;
-        }
-        input[type="submit"]{
-        	margin-left:48%;
-        }
-        h3{
-        	text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <form action="" method="post">
-      <div>
-        <label for="n_ecrou">Numero Detenu :</label>
-        <input type="number" min="0" required id="n_ecrou" name="n_ecrou">
-      </div>
-      <div>
-        <label for="prenom">Prenom :</label>
-        <input type="text" required id="prenom" name="prenom">
-      </div>
-      <div>
-        <label for="nom">Nom :</label>
-        <input type="text" required id="nom" name="nom">
-      </div>
-      <div>
-        <label for="date_naissance">Date de naissance :</label>
-        <input type="date" required id="date_naissance" name="date_naissance">
-      </div>
-      <div>
-        <label for="n_ecrou">Lieu de naissance :</label>
-        <input type="text" required id="lieu_naissance" name="lieu_naissance">
-      </div>
-      <input type="submit" value="Envoyer" />
-    </form>
-</body>
+<html>
+    <head>
+      <title>Choix d'une affaire</title>
+      <link rel="stylesheet" href="../css/menu.css">
+      <link rel="stylesheet" href="../css/style.css">
+    </head>
+    <header>
+        <nav>
+            <ul id="menu">
+                <li><a href="/incarcerer">Incarcérer un prisonnier</a></li>
+                <li><a href="/deciderCondamnation">Condamnation</a></li>
+                <li><a href="/deciderReductionPeine">Reduction de peine</a></li>
+                <li><a href="/deciderLiberationDefinitive">Liberté définitive</a></li>
+                <li><a href="/preventive">Prisonniers en préventive</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <body>
+        <form action="" method="post">
+          <div>
+            <label for="n_ecrou">Numero Detenu :</label>
+            <input type="number" min="0" required id="n_ecrou" name="n_ecrou">
+          </div>
+          <div>
+            <label for="prenom">Prenom :</label>
+            <input type="text" required id="prenom" name="prenom">
+          </div>
+          <div>
+            <label for="nom">Nom :</label>
+            <input type="text" required id="nom" name="nom">
+          </div>
+          <div>
+            <label for="date_naissance">Date de naissance :</label>
+            <input type="date" required id="date_naissance" name="date_naissance">
+          </div>
+          <div>
+            <label for="n_ecrou">Lieu de naissance :</label>
+            <input type="text" required id="lieu_naissance" name="lieu_naissance">
+          </div>
+          <input type="submit" value="Envoyer" />
+        </form>
+    </body>
+
+</html>
