--- a/views/nouvelleAffaire.html
+++ b/views/nouvelleAffaire.html
@@ -1,50 +1,36 @@
-<head>
-    <style type="text/css" media="screen">
-        body{
-        	position: absolute;
-        	width:100%;
-        	height:100%;
-        	background:#D0ECE7;
-        }
-        form{
-        	background:  #73C6B6 ;
-        	position: absolute;
-        	top: 20%;
-        	left: 25%;
-        	right: 25%;
-        	bottom: 20%;
-        	border :4mm ridge grey;
-        }
-        .inline{
-        margin-left:30%;
-        }
-        input{
-        	padding:3px;
-        	margin-bottom:10px;
-        	margin-top:10px;
-        }
-        input[type="submit"]{
-        	margin-left:48%;
-        }
-        h3{
-        	text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <form action="newAffaire" method="post">
-      <div>
-        <label for="n_affaire">Numero affaire :</label>
-        <input type="number" required min="0" id="n_affaire" name="n_affaire">
-      </div>
-      <div>
-        <label for="nom_juridiction">Nom de la juridiction :</label>
-        <input type="text" required id="nom_juridiction" name="nom_juridiction">
-      </div>
-      <div>
-        <label for="date_faits">Date du fait:</label>
-        <input type="date" required id="date_faits" name="date_faits">
-      </div>
-      <input type="submit" value="Envoyer" />
-    </form>
-</body>
+<html>
+    <head>
+      <title>Choix d'une affaire</title>
+      <link rel="stylesheet" href="../css/menu.css">
+      <link rel="stylesheet" href="../css/style.css">
+    </head>
+    <header>
+        <nav>
+            <ul id="menu">
+                <li><a href="/incarcerer">Incarcérer un prisonnier</a></li>
+                <li><a href="/deciderCondamnation">Condamnation</a></li>
+                <li><a href="/deciderReductionPeine">Reduction de peine</a></li>
+                <li><a href="/deciderLiberationDefinitive">Liberté définitive</a></li>
+                <li><a href="/preventive">Prisonniers en préventive</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <body>
+        <form action="newAffaire" method="post">
+          <div>
+            <label for="n_affaire">Numero affaire :</label>
+            <input type="number" required min="0" id="n_affaire" name="n_affaire">
+          </div>
+          <div>
+            <label for="nom_juridiction">Nom de la juridiction :</label>
+            <input type="text" required id="nom_juridiction" name="nom_juridiction">
+          </div>
+          <div>
+            <label for="date_faits">Date du fait:</label>
+            <input type="date" required id="date_faits" name="date_faits">
+          </div>
+          <input type="submit" value="Envoyer" />
+        </form>
+    </body>
+</html>
