--- a/views/reductionPeine.ejs
+++ b/views/reductionPeine.ejs
@@ -1,21 +1,43 @@
-<form action="" method="post">
+<html>
+    <head>
+      <title>Choix d'une affaire</title>
+      <link rel="stylesheet" href="../css/menu.css">
+      <link rel="stylesheet" href="../css/style.css">
+    </head>
+    <header>
+        <nav>
+            <ul id="menu">
+                <li><a href="/incarcerer">Incarcérer un prisonnier</a></li>
+                <li><a href="/deciderCondamnation">Condamnation</a></li>
+                <li><a href="/deciderReductionPeine">Reduction de peine</a></li>
+                <li><a href="/deciderLiberationDefinitive">Liberté définitive</a></li>
+                <li><a href="/preventive">Prisonniers en préventive</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <body>
+        <form action="" method="post">
 
 
-  <% for(var i=0; i<detenus.length; i++){ %>
-  <input type="radio" name="n_ecrou" value=<%= detenus[i].n_ecrou %> id=<%= detenus[i].n_ecrou %> />
-  <p><%= detenus[i].n_ecrou %>  <%= detenus[i].prenom %>  <%= detenus[i].nom %> <%= detenus[i].date_naissance %>  <%= detenus[i].lieu_naissance %></p>
-  <% } %>
+          <% for(var i=0; i<detenus.length; i++){ %>
+          <input type="radio" name="n_ecrou" value=<%= detenus[i].n_ecrou %> id=<%= detenus[i].n_ecrou %> />
+          <p><%= detenus[i].n_ecrou %>  <%= detenus[i].prenom %>  <%= detenus[i].nom %> <%= detenus[i].date_naissance %>  <%= detenus[i].lieu_naissance %></p>
+          <% } %>
 
-  <div>
-    <label for="date_decision">Date de la decision:</label>
-    <input type="date" id="date_decision" name="date_decision">
-  </div>
+          <div>
+            <label for="date_decision">Date de la decision:</label>
+            <input type="date" id="date_decision" name="date_decision">
+          </div>
 
-  <div>
-    <label for="duree">Duree de la condamnation :</label>
-    <input type="number" id="duree" step="0.01" name="duree">
-  </div>
+          <div>
+            <label for="duree">Duree de la condamnation :</label>
+            <input type="number" id="duree" step="0.01" name="duree">
+          </div>
 
-  <input type="submit" value="Envoyer" />
+          <input type="submit" value="Envoyer" />
 
-</form>
+        </form>
+    </body>
+
+</html>
