--- a/views/choixMotif.ejs
+++ b/views/choixMotif.ejs
@@ -21,13 +21,14 @@
         <form action="" method="post">
           <% for(var i=0; i<motifs.length; i++){ %>
               <div>
-                  <input type="radio" name="n_motif" value=<%= motifs[i].n_motif %> id=<%= motifs[i].n_motif %> />
                   <label><%= motifs[i].n_motif %> :  <%= motifs[i].libelle_motif %></label>
+                  <input type="radio" name="n_motif" value=<%= motifs[i].n_motif %> id=<%= motifs[i].n_motif %> />
               </div>
 
           <% } %>
           <div>
-               <input type="radio" name="n_motif" value="-1" id="-1" /> <label> Nouveau motif </label>
+              <label> Nouveau motif </label>
+               <input type="radio" name="n_motif" value="-1" id="-1" />
           </div>
           <div>
               <input type="submit" value="Envoyer" />
