--- a/views/nouveauDetenu.html
+++ b/views/nouveauDetenu.html
@@ -20,7 +20,7 @@
         <form action="" method="post">
           <div>
             <label for="n_ecrou">Numero Detenu :</label>
-            <input type="number" min="0" required id="n_ecrou" name="n_ecrou">
+            <input type="number" min="0" max="9999" required id="n_ecrou" name="n_ecrou">
           </div>
           <div>
             <label for="prenom">Prenom :</label>
