--- a/views/nouvelleAffaire.html
+++ b/views/nouvelleAffaire.html
@@ -20,7 +20,7 @@
         <form action="newAffaire" method="post">
           <div>
             <label for="n_affaire">Numero affaire :</label>
-            <input type="number" required min="0" id="n_affaire" name="n_affaire">
+            <input type="number" required min="0" max="99" id="n_affaire" name="n_affaire">
           </div>
           <div>
             <label for="nom_juridiction">Nom de la juridiction :</label>
