--- a/views/choixAffaire.ejs
+++ b/views/choixAffaire.ejs
@@ -22,12 +22,13 @@
         <form action="" method="post">
             <% for(var i=0; i<affaires.length; i++){ %>
                 <div>
+                    <label for= <%= affaires[i].n_affaire %> > <%= affaires[i].n_affaire %> dans <%= affaires[i].nom_juridiction %></label>
                     <input type="radio" name="n_affaire" value=<%= affaires[i].n_affaire %> id=<%= affaires[i].n_affaire %> />
-                    <label><%= affaires[i].n_affaire %> dans <%= affaires[i].nom_juridiction %></label>
                 </div>
             <% } %>
             <div>
-                <input type="radio" name="n_affaire" value="-1" id="-1" /> <label> Nouvelle affaire </label>
+                <label for="-1"> Nouvelle affaire </label>
+                <input type="radio" name="n_affaire" value="-1" id="-1" />
             </div>
             <div>
                 <input type="submit" value="Envoyer" />
