--- a/views/condamnation.ejs
+++ b/views/condamnation.ejs
@@ -18,11 +18,12 @@
     </header>
 
     <body>
+        <h1>Décider d'une condamnation</h1>
         <form action="" method="post">
 
         <% for(var i=0; i<detenus.length; i++){ %>
-            <label><%= detenus[i].n_ecrou %>  <%= detenus[i].prenom %>  <%= detenus[i].nom %> </label>
-            <input type="radio" name="n_ecrou" value=<%= detenus[i].n_ecrou %> id=<%= detenus[i].n_ecrou %> />
+            <label><input type="radio" name="n_ecrou" value=<%= detenus[i].n_ecrou %> id=<%= detenus[i].n_ecrou %> /> <%= detenus[i].n_ecrou %>  <%= detenus[i].prenom %>  <%= detenus[i].nom %> </label>
+
           <% } %>
 
           <div>
