--- a/views/nouveauMotif.html
+++ b/views/nouveauMotif.html
@@ -17,6 +17,7 @@
     </header>
 
     <body>
+        <h1>Créer un nouveau motif</h1>
         <form action="newMotif" method="post">
           <div>
             <label for="n_motif">Numero Motif :</label>
