--- a/views/nouvelleAffaire.html
+++ b/views/nouvelleAffaire.html
@@ -17,6 +17,7 @@
     </header>
 
     <body>
+        <h1>Créer une affaire</h1>
         <form action="newAffaire" method="post">
           <div>
             <label for="n_affaire">Numero affaire :</label>
