--- a/views/nouveauDetenu.html
+++ b/views/nouveauDetenu.html
@@ -17,6 +17,7 @@
     </header>
 
     <body>
+        <h1>Créer un nouveau detenu à incarcerer</h1>
         <form action="" method="post">
           <div>
             <label for="n_ecrou">Numero Detenu :</label>
