--- a/views/preventive.ejs
+++ b/views/preventive.ejs
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <body>
+        <h1>Liste des prisonniers en préventive</h1>
         <% for(var i=0; i<detenuPreventive.length; i++){ %>
         <p> <%= detenuPreventive[i].n_ecrou %>  <%= detenuPreventive[i].prenom %>  <%= detenuPreventive[i].nom %> <%= detenuPreventive[i].date_naissance %>  <%= detenuPreventive[i].lieu_naissance %></p>
         <% } %>
