--- a/views/nouvelleAffaire.html
+++ b/views/nouvelleAffaire.html
@@ -1,7 +1,116 @@
 <html>
     <head>
       <title>Choix d'une affaire</title>
-      <link rel="stylesheet" href="../css/menu.css">
+      <style media="screen">
+      body{
+          font-family: "trebuchet ms",sans-serif;
+          font-size: 1.25vw;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: #b4fff1;
+          font-weight: bold;
+      }
+
+      h1{
+          text-align: center;
+      }
+
+      form {
+          position: absolute;
+          top: 10vw;
+          left: 37.5vw;
+          background-color: rgb(175, 175, 175);
+          padding: 2vw;
+          width: 20vw;
+          border : 0.12vw solid rgb(0, 0, 0);
+          border-radius: 3vw 3vw 3vw 3vw;
+          align-content: center;
+      }
+
+      input{
+          font-size: 1.25vw;
+          width: 15vw;
+          padding: 0.5vw;
+          margin-bottom: 0.75vw;
+          margin-top: 0.75vw;
+          margin-left: 2.9vw;
+          background-color: #ffffff;
+          border : 0.12vw solid rgb(0, 0, 0);
+          border-radius: 1vw 1vw 1vw 1vw;
+      }
+
+      h3{
+          text-align: center;
+      }
+
+      label {
+          margin-top: 0.75vw;
+          margin-left: 0.75vw;
+          display:block;
+
+      }
+
+      input[type=submit]{
+          font-size: 1.25vw;
+          font-weight: bold ;
+          width: 10vw;
+          margin-left: 5.75vw;
+          margin-right: 5.75vw;
+          border-radius: 1vw 1vw 1vw 1vw;
+          box-shadow: 0.25vw 0.25vw 0.25vw #000000;
+          cursor:pointer;
+      }
+
+      input[type=radio] {
+       background-color:transparent;
+       border:none;
+       width:10px;
+       }
+
+       p {
+           margin-top: 2vw;
+           margin-bottom: 2vw;
+           margin-left: 37.5vw;
+           display: absolute;
+           background-color: rgb(175, 175, 175);
+           padding: 2vw;
+           width: 20vw;
+           border : 0.12vw solid rgb(0, 0, 0);
+           border-radius: 2vw 2vw 2vw 2vw;
+           align-content: center;
+           box-shadow: 0.25vw 0.25vw 0.25vw #000000;
+       }
+       header{
+           width: auto;
+           margin: auto;
+       }
+       nav{
+           top: 0;
+           width: 100%;
+           background : #000;
+           margin: 0; padding: 0;
+           color: black;
+           text-align: center;
+       }
+       #menu{
+           margin:0;
+       }
+       #menu li{
+           display: inline;
+           list-style: none;
+       }
+
+       body{
+           margin:0;
+       }
+
+       #menu li a{
+           display:inline-block;
+           margin: 20px;
+           color : white;
+       }
+      </style>
       <link rel="stylesheet" href="../css/style.css">
     </head>
     <header>
@@ -15,7 +124,6 @@
             </ul>
         </nav>
     </header>
-
     <body>
         <h1>Créer une affaire</h1>
         <form action="newAffaire" method="post">
